Fixed boarders not aligning screen edges

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,10 @@ html{
     position: relative;
 }
 header {
+    position: fixed;
+    top: 4px;
+    left: 4px;
+    right: 4px;
     padding: 15px;
     margin-bottom: 50px;
     background-position-x: -16px; 
@@ -32,7 +36,8 @@ body {
     overflow-x: hidden; /* Hide horizontal scrollbar */
     color: rgb(255, 255, 255);
     font-family: FONT_NORMAL;
-    padding-bottom: 100px;
+    padding-top: 150px;
+    padding-bottom: 50px;
 }
 h1 {
     font-family: FONT_ALIASED;
@@ -53,12 +58,13 @@ footer {
 
     /* Scroll Footer */
     position: fixed;
-    bottom: 0;
+    bottom: 4px;
+    left: 4px;
+    right: 4px;
     margin-top: 50px;
 
     text-align: center;
     padding: 15px;
-    width: calc(100% - 30px);
     background-color: rgb(0, 0, 130);
     color: rgb(255, 255, 255);
     font-family: FONT_NORMAL;
